<resources>
    <string name="app_name">LoginRegister</string>
    <string name="example_of_using_nodejs">Example of using NodeJS</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="name_hint">Enter your name</string>
    <string name="username">Username</string>
    <string name="there_will_be_something_someday">There will be something someday</string>
    <string name="search_for_courses_in_the_future">Search (for courses in the future)</string>
    <string name="txt_title">Title</string>
    <string name="description">Description</string>
    <string name="image_of_course">Image of Course</string>
</resources>
