<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_blank_user"
            app:civ_border_width="2dp"
            android:layout_gravity="center_horizontal"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:id="@+id/username"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:met_baseColor="@android:color/white"
            app:met_textColorHint="@android:color/white"
            app:met_primaryColor="@android:color/white"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_user" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_textColorHint="@android:color/white"
            app:met_primaryColor="@android:color/white"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/something_button"
                android:text="@string/there_will_be_something_someday"
                android:textSize="20sp"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_marginEnd="8dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/search_for_users_button"
                android:text="@string/search_for_courses_in_the_future"
                android:textSize="20sp"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_marginStart="8dp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>